--- a/rmarkdown.Rmd
+++ b/rmarkdown.Rmd
@@ -18,35 +18,23 @@ library(apaTables)
 
 # Comparing rating-complaint to rating-critical correlations
 
-Here are words explaining this correlation
+The correlation between ratings and complaints and ratings and critical was *r* = .67, 95% CI [.32,1.00], *N* = 30. However, the CI is quite long, and is consistent with anywhere from a medium positive to a very strong positive relationship.
 
-delta r = .67, 95% CI (.32, 1.04)
-
-So it is significant? yes. Null hypothesis rejected because interval does not include 0.
-Can also throw in p value
 
 \pagebreak
 
 # Comparing rating-complaint to raises-critical correlations
 
-Here are words explaining this correlation
 
-delta r = .45, 95% CI (.14, .81)
-
-So it is significant? yes. Null hypothesis rejected because interval does not include 0.
-Can also throw in p value
+The correlation between ratings and complaints and raises and critical was *r* = .45, 95% CI [.14,.81], *N* = 30. However, the CI is quite long, and is consistent with anywhere from a weak positive to a very strong positive relationship.
 
 \pagebreak
 
 #Replication of rating-privileges correlation 
 
-Original study: r = 0.43, N = 30, 95% CI[0.08, 0.68]
-Replication study: N = 100
-Prediction interval: 95% PI[0.05,0.74].
-
 
 Interpretation:
-The original correlation is 0.43 - with a prediction interval 95% PI[0.05, 0.74] based a replication sample size of N = 100. If the replication correlation differs from the original correlation only due to sampling error, there is a 95% chance the replication result will fall in this interval. If the replication correlation falls outside of this range, factors beyond sampling error are likely also responsible for the difference.
+The original study found a correlation of *r* = .43, 95% PI[0.05, 0.74], *N* = 30. This means that if the replication correlation differs from the original correlation only due to sampling error, there is a 95% chance the replication result will fall in this interval with a replication sample size of *N* = 100. If the replication correlation falls outside of this range, factors beyond sampling error are likely also responsible for the difference.
 
 \pagebreak
 
@@ -57,20 +45,8 @@ Also, small sample size - not possible to do this.
 
 \pagebreak
 
-#Comparing two correlation of rating-privileges
+#Comparing two correlations of rating-privileges
 
-Here are words explaining this correlation
 
-delta r = .33, 95% CI (-.02, .59)
-
-So it is significant? no. Null hypothesis retained because interval includes 0.
-Can also throw in p value
-
-#Comparing two correlation of rating-privileges
-
-Here are words explaining this correlation
-
-delta r = .33, 95% CI (-.02, .59)
-
-It could be as low as -.02 and as high as .59, even though the original correlation obtained of .43 appears to be medium. As such, there is likely a small positive effect. 
+The correlation between orginal and replication studies on the correlation of ratings and privileges was *r* = .33, 95% CI [-.02,.59], *N* = 30. However, the CI is quite long, and likely indicates a positive relationship.
 
