--- a/rmarkdown.Rmd
+++ b/rmarkdown.Rmd
@@ -21,35 +21,31 @@ library(apaTables)
 The comparison for the correlations between ratings and complaints and ratings and critical was delta *r* = .67, 95% CI [.32,1.00], *N* = 30. However, the CI is quite long, and is consistent with anywhere from a medium positive to a very strong positive relationship. This indicates that the rating-complaint correlation (*r* = .83, 95% CI [.66,.91]) is likely stronger than the ratings-critical (*r* = .16, 95% CI[-.22, .49) correlation.
 
 
-\pagebreak
 
 # Comparing rating-complaint to raises-critical correlations
 
 
 The comparison for the correlation between ratings and complaints and raises and critical was delta *r* = .45, 95% CI [.14,.81], *N* = 30. However, the CI is quite long, and is consistent with anywhere from a weak positive to a very strong positive relationship. This indicates that the rating-complaint correlation (*r* = .83, 95% CI [.66,.91]) is likely stronger than the ratings-critical (*r* = .38, 95% CI[.02, .65) correlation.
 
-\pagebreak
 
 #Replication of rating-privileges correlation 
 
 
-Interpretation:
 The original study found a ratings-privileges correlation of *r* = .43, 95% CI [08, .68], 95% PI[.05, 0.74], *N* = 30. This means that if the replication correlation differs from the original correlation only due to sampling error, there is a 95% chance that a replication result with a sample size of *N* = 100 will fall in the interval of .05 and .74. If the replication correlation falls outside of this range, factors beyond sampling error are likely also responsible for the difference.
 
-\pagebreak
 
 #Replication of rating-privileges correlation 
 
-Cannot do it - width maxes out at sample size of 1000. Not possible to do this because of the small sample size. Even if possible, it wouldn't matter. If original had small n and replication study has large n, but the original study had a narrow PI and the replication r does not with within this PI, it still not very meaningful as the replication study may be more valid than the original one.
 
-\pagebreak
+
+It is not possible to do this because of the small sample size; the width does not change with a sample size of 1000. Additionally, even if it were possible, it wouldn't matter due to the small sample size from the original study. If the original study had small n and the replication study has large n, but the original study had a narrow PI and the replication r does not with within this PI, it still not very meaningful as the replication study may be more valid than the original one.
+
 
 #Comparing two correlations of rating-privileges
 
 
 The comparison correlation between orginal and replication studies on the correlation of ratings and privileges was delta *r* = .33, 95% CI [-.02,.59]. However, the CI is quite long and could indicate either a positive or very weak negative relationship. This means that, while it is likely that the two correlations are different, we cannot rule out that they came from the same population. 
 
-\pagebreak
 
 #Strength of rating-privileges
 
