--- a/rmarkdown.Rmd
+++ b/rmarkdown.Rmd
@@ -18,14 +18,14 @@ library(apaTables)
 
 # Comparing rating-complaint to rating-critical correlations
 
-The comparison for the correlations between ratings and complaints and ratings and critical was delta *r* = .67, 95% CI [.32,1.00], *N* = 30. However, the CI is quite long, and is consistent with anywhere from a medium positive to a very strong positive relationship. This indicates that the rating-complaint correlation (*r* = .83, 95% CI [.66,.91]) is likely stronger than the ratings-critical (*r* = .16, 95% CI[-.22, .49) correlation.
+The comparison for the correlations between ratings and complaints and ratings and critical was delta *r* = .67, 95% CI [.32,1.00], *p* = .0001, *N* = 30. However, the CI is quite long, and is consistent with anywhere from a medium positive to a very strong positive relationship. This indicates that the rating-complaint correlation (*r* = .83, 95% CI [.66,.91]) is likely stronger than the ratings-critical (*r* = .16, 95% CI[-.22, .49) correlation.
 
 
 
 # Comparing rating-complaint to raises-critical correlations
 
 
-The comparison for the correlation between ratings and complaints and raises and critical was delta *r* = .45, 95% CI [.14,.81], *N* = 30. However, the CI is quite long, and is consistent with anywhere from a weak positive to a very strong positive relationship. This indicates that the rating-complaint correlation (*r* = .83, 95% CI [.66,.91]) is likely stronger than the ratings-critical (*r* = .38, 95% CI[.02, .65) correlation.
+The comparison for the correlation between ratings and complaints and raises and critical was delta *r* = .45, 95% CI [.14,.81], *p* = .005, *N* = 30. However, the CI is quite long, and is consistent with anywhere from a weak positive to a very strong positive relationship. This indicates that the rating-complaint correlation (*r* = .83, 95% CI [.66,.91]) is likely stronger than the ratings-critical (*r* = .38, 95% CI[.02, .65) correlation.
 
 
 #Replication of rating-privileges correlation 
@@ -43,7 +43,7 @@ It is not possible to do this because of the large confidence interval in the or
 #Comparing two correlations of rating-privileges
 
 
-The comparison correlation between orginal and replication studies on the correlation of ratings and privileges was delta *r* = .33, 95% CI [-.02,.59], *p* = .07 . Statistically, this means that  we cannot rule out that the two correlations came from the same population. 
+The comparison correlation between orginal and replication studies on the correlation of ratings and privileges was delta *r* = .33, 95% CI [-.02,.59], *p* = .065 . Statistically, this means that  we cannot rule out that the two correlations came from the same population. 
 
 
 #Strength of rating-privileges
